# pysphinx_mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: auto-tags.js  pr-template.js  template-check.js
.github/workflows/: lint.yml  pr-checks.yml  pr-governance.yml  pr-template.yml  release.yml
pysphinx_mcp/: __init__.py  __main__.py  _client.py  _server.py  _version.py  client.py  server.py  utils.py
pysphinx_mcp/core/: __init__.py  _app.py  _fetcher.py  _parser.py  _search.py  _service.py  fetcher.py  parser.py  search.py  service.py  utils.py
pysphinx_mcp/types/: __init__.py  _errors.py  _models.py  models.py
